--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ language: java
 jdk:
 - oraclejdk8
 install: "./gradlew --version"
-script: "./gradlew --continue export.com.acme.prime.eval"
+script:
+- "./gradlew --continue"
+- "./gradlew --continue export.com.acme.prime.eval"
 deploy:
   provider: releases
   api_key:
