--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ jdk:
 - oraclejdk8
 install: "./gradlew --version"
 script:
-- "./gradlew --continue"
-- "./gradlew --continue export.com.acme.prime.eval"
+- "./gradlew build"
+- "./gradlew export.com.acme.prime.eval"
 deploy:
   provider: releases
   api_key:
